reformatting all pages

--- a/contact.html
+++ b/contact.html
@@ -79,18 +79,17 @@
     
 
     <!-- Footer-------------------------------------------------------------->
-<!-- 
-    <footer class="footer footer-portfolio">
-      <div class="container">
-          <div class="footer-links">
-              <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
-                  <i class="fab fa-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                      class="fab fa-linkedin-in"></i></a>
-              <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
-          </div>
+
+    
+    <footer class="footer footer-contact mx-auto">
+      <div class="footer-links">
+        <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+            class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+          <i class="fab fa-instagram"></i></a>
       </div>
-  </footer> -->
+</footer>
 
     <!-------------------------------------------------- End Footer ----------------------------->
 
