--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 
 
     <section class="row">
-      <section>
-        <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert" class="headshot mx-auto img-responsive">
+      <section class="mx-auto">
+        <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert" class="headshot mx-auto">
       </section>
+    </section>
 
 
-
+    <section class="row">
       <section id="bio" class="mx-auto">
         <br>
         <br>
@@ -75,7 +76,7 @@
         <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer who creates websites from
           scratch. I am looking to work in web development because I love designing new things and working in teams. I
           am looking to shift my career because I think that web development would suit me very well and I love to learn
-          new ideas. Core competencies include HTML, CSS, Javascript, RESTful APIs, Node.js, MongoDB, and React. Check out some of my work in my <a href="portfolio.html">portfolio</a> and <a href="https://github.com/rsg71" target="_blank">GitHub</a>, add me on <a
+          new ideas. Core competencies include Git, HTML, CSS, Javascript, jQuery, Ajax, RESTful APIs, Node.js, MongoDB, and React. Check out some of my work in my <a href="portfolio.html">portfolio</a> and <a href="https://github.com/rsg71" target="_blank">GitHub</a>, add me on <a
             href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn</a>, or send me an email
           through my <a href="contact.html">contact</a> page.
         </p>
@@ -86,13 +87,10 @@
         <br>
 
         <div class="row mx-auto" style="width:200px" id="github">
-          <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-              class="fab fa-linkedin-in"></i></a>
-          <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
-            <i class="fab fa-instagram-square"></i></a>
+          
         </div>
       </section>
+    </section>
   </main>
 
 
@@ -101,18 +99,16 @@
 
   <!-- Footer-------------------------------------------------------------->
 
-  <!-- 
-    <footer class="footer footer-portfolio mx-auto">
-      <div class="container">
+  
+    <footer class="footer footer-index mx-auto">
           <div class="footer-links">
-              <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
-                  <i class="fab fa-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                      class="fab fa-linkedin-in"></i></a>
-              <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+                class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+              <i class="fab fa-instagram"></i></a>
           </div>
-      </div>
-  </footer> -->
+  </footer>
   <!-------------------------------------------------- End Footer ----------------------------->
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
