--- a/portfolio.html
+++ b/portfolio.html
@@ -53,36 +53,14 @@
     <!-- End Nav bar ------------------------------------------------------------------------------->
 
     <main class="container portfolio">
-        <section class="row row-cols-1 row-cols-md-2">
-            <section class="col mb-4">
-                <figure class="card">
-                    <a href="https://rsg71.github.io/MyFirst-HTML/" target="_blank"><img src="imgs/key-west.jpg"
-                            class="card-img-top card-1" alt="first website"></a>
-                    <figure class="card-body">
-                        <h5 class="card-title">My First Website</h5>
-                        <p class="card-text">This is the first website I created; it will be undergoing future changes
-                            as I develop further</p>
-                    </figure>
-                </figure>
-            </section>
-            <section class="col mb-4">
-                <figure class="card">
-                    <a href="https://rsg71.github.io/Code-refactor/" target="_blank"><img
-                            src="imgs/digital-marketing-meeting.jpg" class="card-img-top"
-                            alt="second website for digital marketing company"></a>
-                    <figure class="card-body">
-                        <h5 class="card-title">Horiseon Social Solution Services</h5>
-                        <p class="card-text">This is a website whose code I edited to include semantic element tags;
-                            thereby improving SEO performance and increases accessibility</p>
-                    </figure>
-                </figure>
-            </section>
+        <section class="row row-cols-1 row-cols-md-2 portfolio-body">
+            
             <section class="col mb-4">
                 <figure class="card">
                     <a href="https://rsg71.github.io/Password-Generator-Robert-Greenawalt/" target="_blank"><img
                             src="imgs/Password-generator.PNG"
-                            class="card-img-top" alt="coming soon image"></a>
-                    <figure class="card-body">
+                            class="card-img-top" alt="coming soon image" height="358"></a>
+                    <figure class="card-body" id="pass-gen-card-body">
                         <h5 class="card-title">Password Generator</h5>
                         <p class="card-text"> A simple password generator that takes an input for character length and inclusion of various types of characters, and returns a randomly generated password to the user</p>
                     </figure>
@@ -92,7 +70,7 @@
                 <figure class="card">
                     <a href="https://rsg71.github.io/Code_Quiz-Robert_Greenawalt/" target="_blank"><img
                             src="imgs/code-quiz.PNG"
-                            class="card-img-top" alt="coming soon image"></a>
+                            class="card-img-top" alt="coming soon image" height="358"></a>
                     <figure class="card-body">
                         <h5 class="card-title">Code Quiz</h5>
                         <p class="card-text">Test your Javascript knowledge with this short code quiz; save your high scores and try to beat your personal best</p>
@@ -103,7 +81,7 @@
                 <figure class="card">
                     <a href="https://rsg71.github.io/Work-Scheduler/" target="_blank"><img
                             src="imgs/work-scheduler.PNG"
-                            class="card-img-top card-1" alt="coming soon image"></a>
+                            class="card-img-top card-1" alt="coming soon image" height="358"></a>
                     <figure class="card-body">
                         <h5 class="card-title">Work Scheduler</h5>
                         <p class="card-text">A 9-5 work schedule that changes color dynamically; grey is past, red is the current hour, and green is the future</p>
@@ -114,7 +92,7 @@
                 <figure class="card">
                     <a href="https://rsg71.github.io/Weather-App/" target="_blank"><img
                             src="imgs/weather-app.PNG"
-                            class="card-img-top" alt="coming soon image"></a>
+                            class="card-img-top" alt="coming soon image" height="358"></a>
                     <figure class="card-body">
                         <h5 class="card-title">Weather App</h5>
                         <p class="card-text">This is a future project that I have not yet completed. I will be filling
@@ -126,7 +104,7 @@
                 <figure class="card">
                     <a href="https://lambaa94.github.io/Brewery-Finder/" target="_blank"><img
                             src="imgs/brewery-finder.PNG"
-                            class="card-img-top" alt="coming soon image"></a>
+                            class="card-img-top" alt="coming soon image" height="358"></a>
                     <figure class="card-body">
                         <h5 class="card-title">Brewery Finder Project</h5>
                         <p class="card-text">Search by state and select brewery type to find a list of breweries</p>
@@ -136,25 +114,18 @@
         </section>
     </main>
 
-
-
-    <br>
-    <br>
-    <br>
-    <br>
     <!-- Footer-------------------------------------------------------------->
 
-    <!-- <footer class="footer footer-portfolio">
-        <div class="container">
-            <div class="footer-links">
-                <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
-                    <i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
-            </div>
+    
+    <footer class="footer footer-portfolio mx-auto">
+        <div class="footer-links">
+          <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+              class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+            <i class="fab fa-instagram"></i></a>
         </div>
-    </footer> -->
+</footer>
     <!-------------------------------------------------- End Footer ----------------------------->
 
 
