including resume link in website

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </p>
         <p><i class="fas fa-envelope"></i><span class="font-weight-bold"> Email: </span>robert.greenawalt29@gmail.com</p>
         <p><i class="fas fa-phone"></i><span class="font-weight-bold"> Phone: </span>215-913-7231</p>
+        <p><i class="fas fa-file"></i><span class="font-weight-bold"> Resume: </span><a href="resume.html">Resume File</a></p>
 
         <br>
 
