creating portfolio and resume buttons on homepage

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section class="row">
       <section class="mx-auto">
-        <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert" class="headshot mx-auto">
+        <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert" class="headshot mx-auto shadow-lg">
       </section>
     </section>
 
@@ -73,21 +73,29 @@
         <h3 class="bio">
           Bio: <br>
         </h3>
-        <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer who creates websites from
-          scratch. I am looking to work in web development because I love designing new things and working in teams. I
-          am looking to shift my career because I think that web development would suit me very well and I love to learn
-          new ideas. Core competencies include Git, HTML, CSS, Javascript, jQuery, Ajax, RESTful APIs, Node.js, MongoDB, and React. Check out some of my work in my <a href="portfolio.html">portfolio</a> and <a href="https://github.com/rsg71" target="_blank">GitHub</a>, add me on <a
-            href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn</a>, or send me an email
+        <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer. I am looking to work in web development because I love designing new things and working in teams. I would like to shift my career because I think that web development would suit me very well and I love to learn
+          new ideas. Core competencies include Git, HTML, CSS, Javascript, jQuery, Ajax, RESTful APIs, Node.js, MongoDB,
+          and React. Check out some of my work in my <a href="portfolio.html">portfolio</a> and <a
+            href="https://github.com/rsg71" target="_blank">GitHub</a>, add me on <a
+            href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn</a>, or send me an
+          email
           through my <a href="contact.html">contact</a> page.
         </p>
-        <p><i class="fas fa-envelope"></i><span class="font-weight-bold"> Email: </span>robert.greenawalt29@gmail.com</p>
+        
+        <p><i class="fas fa-envelope"></i><span class="font-weight-bold"> Email: </span>robert.greenawalt29@gmail.com
+        </p>
         <p><i class="fas fa-phone"></i><span class="font-weight-bold"> Phone: </span>215-913-7231</p>
-        <p><i class="fas fa-file"></i><span class="font-weight-bold"> Resume: </span><a href="resume.html">Resume File</a></p>
+        <div class="row" id="resume-portfolio-buttons">
+          <button id="portfolio-Btn" class="btn btn-lg btn-outline-dark mx-auto"><a href="portfolio.html" id="portfolio-btn-link">Portfolio</a></button>
+          <button id="resume-Btn" class="btn btn-lg btn-outline-dark mx-auto"><a href="resume.html" id="resume-btn-link">Resume</a></button>
+        </div>
+
+
 
         <br>
 
         <div class="row mx-auto" style="width:200px" id="github">
-          
+
         </div>
       </section>
     </section>
@@ -99,15 +107,15 @@
 
   <!-- Footer-------------------------------------------------------------->
 
-  
-    <footer class="footer footer-index mx-auto">
-          <div class="footer-links">
-            <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                class="fab fa-linkedin-in"></i></a>
-            <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
-              <i class="fab fa-instagram"></i></a>
-          </div>
+
+  <footer class="footer footer-index mx-auto">
+    <div class="footer-links">
+      <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+          class="fab fa-linkedin-in"></i></a>
+      <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+        <i class="fab fa-instagram"></i></a>
+    </div>
   </footer>
   <!-------------------------------------------------- End Footer ----------------------------->
 
