--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     <main class="container portfolio">
         <section class="row row-cols-1 row-cols-md-2 portfolio-body">
             
-            <section class="col mb-4">
+            <!-- <section class="col mb-4">
                 <figure class="card">
                     <a href="https://rsg71.github.io/Password-Generator-Robert-Greenawalt/" target="_blank"><img
                             src="imgs/Password-generator.PNG"
@@ -76,8 +76,8 @@
                         <p class="card-text">Test your Javascript knowledge with this short code quiz; save your high scores and try to beat your personal best</p>
                     </figure>
                 </figure>
-            </section>
-            <section class="col mb-4">
+            </section> -->
+            <!-- <section class="col mb-4">
                 <figure class="card">
                     <a href="https://rsg71.github.io/Work-Scheduler/" target="_blank"><img
                             src="imgs/work-scheduler.PNG"
@@ -110,7 +110,84 @@
                         <p class="card-text">Search by state and select brewery type to find a list of breweries</p>
                     </figure>
                 </figure>
-            </section>
+            </section> -->
+
+            
+            <!-- Password Generator -->
+            <div class="card" style="width: 18rem;"> 
+                <img src="imgs/Password-generator.PNG" class="card-img-top" alt="password generator">
+                <div class="card-body">
+                  <h5 class="card-title">Password Generator</h5>
+                  <p class="card-text">A simple password generator that takes an input for character length and inclusion of various types of characters, and returns a randomly generated password to the user</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Technologies Used: HTML, CSS, Javascript</li>
+                </ul>
+                <div class="card-body">
+                  <a href="https://github.com/rsg71/Password-Generator-Robert-Greenawalt" target="_blank" class="card-link">Github Repo</a>
+                </div>
+              </div>
+
+              <!-- Code Quiz -->
+            <div class="card" style="width: 18rem;">
+                <img src="imgs/code-quiz.PNG" class="card-img-top" alt="code quiz">
+                <div class="card-body">
+                  <h5 class="card-title">Code Quiz</h5>
+                  <p class="card-text">Test your Javascript knowledge with this short code quiz; save your high scores and try to beat your personal best</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Technologies Used: HTML, CSS, Javascript</li>
+                </ul>
+                <div class="card-body">
+                  <a href="https://github.com/rsg71/Code_Quiz-Robert_Greenawalt" target="_blank" class="card-link">Github Repo</a>
+                </div>
+              </div>
+
+              <!-- Brewery Finder -->
+            <div class="card" style="width: 18rem;">
+                <img src="imgs/brewery-finder.PNG" class="card-img-top" alt="brewery finder">
+                <div class="card-body">
+                  <h5 class="card-title">Brewery Finder</h5>
+                  <p class="card-text">Search by state and select brewery type to find a list of breweries</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Technologies Used: HTML, CSS, Javascript, 3 APIs (OpenBreweryDB, Yelp, Google Maps)</li>
+                </ul>
+                <div class="card-body">
+                  <a href="https://github.com/rsg71/Brewery-Finder" target="_blank" class="card-link">Github Repo</a>
+                </div>
+              </div>
+
+              <!-- Weather App -->
+            <div class="card" style="width: 18rem;">
+                <img src="imgs/weather-app.PNG" class="card-img-top" alt="Weather app">
+                <div class="card-body">
+                  <h5 class="card-title">Weather App</h5>
+                  <p class="card-text">Search by city to return a real time weather report; also included is a five day forecast</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Technologies Used: HTML, CSS, Javascript, Bootstrap</li>
+                </ul>
+                <div class="card-body">
+                  <a href="https://github.com/rsg71/Weather-App" target="_blank" class="card-link">Github Repo</a>
+                </div>
+              </div>
+
+              <!-- Work Scheduler -->
+            <div class="card" style="width: 18rem;">
+                <img src="imgs/work-scheduler.PNG" class="card-img-top" alt="Work Scheduler">
+                <div class="card-body">
+                  <h5 class="card-title">Work Scheduler</h5>
+                  <p class="card-text">A 9-5 work schedule that changes color dynamically; grey is past, red is the current hour, and green is the future</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Technologies Used: HTML, CSS, Javascript, Bootstrap</li>
+                </ul>
+                <div class="card-body">
+                  <a href="https://github.com/rsg71/Work-Scheduler" target="_blank" class="card-link">Github Repo</a>
+                </div>
+              </div>
+
         </section>
     </main>
 
