changing photo for project on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,14 +55,18 @@
     <main class="container portfolio">
         <section class="row row-cols-1 row-cols-md-2 portfolio-body">
             
-            <!-- <section class="col mb-4">
+            <section class="col mb-4">
                 <figure class="card">
                     <a href="https://rsg71.github.io/Password-Generator-Robert-Greenawalt/" target="_blank"><img
                             src="imgs/Password-generator.PNG"
                             class="card-img-top" alt="coming soon image" height="358"></a>
                     <figure class="card-body" id="pass-gen-card-body">
                         <h5 class="card-title">Password Generator</h5>
-                        <p class="card-text"> A simple password generator that takes an input for character length and inclusion of various types of characters, and returns a randomly generated password to the user</p>
+                        <p class="card-text"> A simple password generator that inputs character length and character type and returns a randomly generated password to the user</p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Technologies Used: HTML, CSS, Javascript</li>
+                            <li class="list-group-item"><a href="https://github.com/rsg71/Password-Generator-Robert-Greenawalt" target="_blank" class="card-link">Github Repo</a></li>
+                        </ul>
                     </figure>
                 </figure>
             </section>
@@ -73,11 +77,15 @@
                             class="card-img-top" alt="coming soon image" height="358"></a>
                     <figure class="card-body">
                         <h5 class="card-title">Code Quiz</h5>
-                        <p class="card-text">Test your Javascript knowledge with this short code quiz; save your high scores and try to beat your personal best</p>
+                        <p class="card-text" id="code-quiz-p">Test your Javascript knowledge with this short code quiz; save your high scores and try to beat your personal best</p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
+                            <li class="list-group-item"><a href="https://github.com/rsg71/Code_Quiz-Robert_Greenawalt" target="_blank" class="card-link">Github Repo</a></li>
+                        </ul>
                     </figure>
                 </figure>
-            </section> -->
-            <!-- <section class="col mb-4">
+            </section>
+            <section class="col mb-4">
                 <figure class="card">
                     <a href="https://rsg71.github.io/Work-Scheduler/" target="_blank"><img
                             src="imgs/work-scheduler.PNG"
@@ -85,6 +93,10 @@
                     <figure class="card-body">
                         <h5 class="card-title">Work Scheduler</h5>
                         <p class="card-text">A 9-5 work schedule that changes color dynamically; grey is past, red is the current hour, and green is the future</p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
+                            <li class="list-group-item"><a href="https://github.com/rsg71/Work-Scheduler" target="_blank" class="card-link">Github Repo</a></li>
+                        </ul>
                     </figure>
                 </figure>
             </section>
@@ -97,6 +109,10 @@
                         <h5 class="card-title">Weather App</h5>
                         <p class="card-text">This is a future project that I have not yet completed. I will be filling
                             out links to new websites as the class progresses.</p>
+                            <ul class="list-group">
+                                <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
+                                <li class="list-group-item"><a href="https://github.com/rsg71/Weather-App" target="_blank" class="card-link">Github Repo</a></li>
+                            </ul>
                     </figure>
                 </figure>
             </section>
@@ -108,13 +124,17 @@
                     <figure class="card-body">
                         <h5 class="card-title">Brewery Finder Project</h5>
                         <p class="card-text">Search by state and select brewery type to find a list of breweries</p>
+                        <ul class="list-group">
+                            <li class="list-group-item">Technologies Used: HTML, CSS, Foundation, Javascript, 3 API's</li>
+                            <li class="list-group-item"><a href="https://github.com/rsg71/Brewery-Finder" target="_blank" class="card-link">Github Repo</a></li>
+                        </ul>
                     </figure>
                 </figure>
-            </section> -->
+            </section>
 
             
             <!-- Password Generator -->
-            <div class="card" style="width: 18rem;"> 
+            <!-- <div class="card" style="width: 18rem;"> 
                 <img src="imgs/Password-generator.PNG" class="card-img-top" alt="password generator">
                 <div class="card-body">
                   <h5 class="card-title">Password Generator</h5>
@@ -126,10 +146,10 @@
                 <div class="card-body">
                   <a href="https://github.com/rsg71/Password-Generator-Robert-Greenawalt" target="_blank" class="card-link">Github Repo</a>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Code Quiz -->
-            <div class="card" style="width: 18rem;">
+            <!-- <div class="card" style="width: 18rem;">
                 <img src="imgs/code-quiz.PNG" class="card-img-top" alt="code quiz">
                 <div class="card-body">
                   <h5 class="card-title">Code Quiz</h5>
@@ -141,10 +161,10 @@
                 <div class="card-body">
                   <a href="https://github.com/rsg71/Code_Quiz-Robert_Greenawalt" target="_blank" class="card-link">Github Repo</a>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Brewery Finder -->
-            <div class="card" style="width: 18rem;">
+            <!-- <div class="card" style="width: 18rem;">
                 <img src="imgs/brewery-finder.PNG" class="card-img-top" alt="brewery finder">
                 <div class="card-body">
                   <h5 class="card-title">Brewery Finder</h5>
@@ -156,10 +176,10 @@
                 <div class="card-body">
                   <a href="https://github.com/rsg71/Brewery-Finder" target="_blank" class="card-link">Github Repo</a>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Weather App -->
-            <div class="card" style="width: 18rem;">
+            <!-- <div class="card">
                 <img src="imgs/weather-app.PNG" class="card-img-top" alt="Weather app">
                 <div class="card-body">
                   <h5 class="card-title">Weather App</h5>
@@ -171,10 +191,10 @@
                 <div class="card-body">
                   <a href="https://github.com/rsg71/Weather-App" target="_blank" class="card-link">Github Repo</a>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Work Scheduler -->
-            <div class="card" style="width: 18rem;">
+            <!-- <div class="card" style="width: 18rem;">
                 <img src="imgs/work-scheduler.PNG" class="card-img-top" alt="Work Scheduler">
                 <div class="card-body">
                   <h5 class="card-title">Work Scheduler</h5>
@@ -186,7 +206,7 @@
                 <div class="card-body">
                   <a href="https://github.com/rsg71/Work-Scheduler" target="_blank" class="card-link">Github Repo</a>
                 </div>
-              </div>
+              </div> -->
 
         </section>
     </main>
