centering headshot for mobile

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 
 
     <section class="row">
-      <section class="mx-auto">
         <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert" class="headshot mx-auto shadow-lg">
-      </section>
     </section>
 
 
@@ -86,8 +84,8 @@
         </p>
         <p><i class="fas fa-phone"></i><span class="font-weight-bold"> Phone: </span>215-913-7231</p>
         <div class="row" id="resume-portfolio-buttons">
-          <button id="portfolio-Btn" class="btn btn-lg btn-outline-dark mx-auto"><a href="portfolio.html" id="portfolio-btn-link">Portfolio</a></button>
-          <button id="resume-Btn" class="btn btn-lg btn-outline-dark mx-auto"><a href="resume.html" id="resume-btn-link">Resume</a></button>
+          <a href="portfolio.html" class="btn btn-lg btn-outline-dark mx-auto" id="portfolio-btn-link">Portfolio</a>
+          <a href="resume.html" class="btn btn-lg btn-outline-dark mx-auto" id="resume-btn-link">Resume</a>
         </div>
 
 
