--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
     <!-- Footer-------------------------------------------------------------->
 
   
-    <footer class="footer footer-index mx-auto">
+    <footer class="footer footer-resume mx-auto">
         <div class="footer-links">
           <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
