updating because Font Awesome is down

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
 
     <section class="row">
-        <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert" class="headshot mx-auto shadow-lg">
+      <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert"
+        class="headshot mx-auto shadow-lg">
     </section>
 
 
@@ -71,7 +72,9 @@
         <h3 class="bio">
           Bio: <br>
         </h3>
-        <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer. I am looking to work in web development because I love designing new things and working in teams. I would like to shift my career because I think that web development would suit me very well and I love to learn
+        <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer. I am looking to work in
+          web development because I love designing new things and working in teams. I would like to shift my career
+          because I think that web development would suit me very well and I love to learn
           new ideas. Core competencies include Git, HTML, CSS, Javascript, jQuery, Ajax, RESTful APIs, Node.js, MongoDB,
           and React. Check out some of my work in my <a href="portfolio.html">portfolio</a> and <a
             href="https://github.com/rsg71" target="_blank">GitHub</a>, add me on <a
@@ -79,13 +82,16 @@
           email
           through my <a href="contact.html">contact</a> page.
         </p>
-        
+
         <p><i class="fas fa-envelope"></i><span class="font-weight-bold"> Email: </span>robert.greenawalt29@gmail.com
         </p>
         <p><i class="fas fa-phone"></i><span class="font-weight-bold"> Phone: </span>215-913-7231</p>
+        <p>Github: <a href="https://github.com/rsg71">Github</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/">LinkedIn</a></p>
         <div class="row" id="resume-portfolio-buttons">
           <a href="portfolio.html" class="btn btn-lg btn-outline-dark mx-auto" id="portfolio-btn-link">Portfolio</a>
           <a href="resume.html" class="btn btn-lg btn-outline-dark mx-auto" id="resume-btn-link">Resume</a>
+          
         </div>
 
 
@@ -97,24 +103,21 @@
         </div>
       </section>
     </section>
-  </main>
-
-
-
 
 
   <!-- Footer-------------------------------------------------------------->
 
 
+<!-- 
   <footer class="footer footer-index mx-auto">
-    <div class="footer-links">
-      <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+  <div class="footer-links">
+      <a href="https://github.com/rsg71" target="_blank">Github<i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn<i
           class="fab fa-linkedin-in"></i></a>
-      <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+      <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">Instagram
         <i class="fab fa-instagram"></i></a>
     </div>
-  </footer>
+  </footer> -->
   <!-------------------------------------------------- End Footer ----------------------------->
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
