--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
     <!-- Footer-------------------------------------------------------------->
 
-    
+<!--     
     <footer class="footer footer-contact mx-auto">
       <div class="footer-links">
         <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
@@ -89,7 +89,7 @@
         <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
           <i class="fab fa-instagram"></i></a>
       </div>
-</footer>
+</footer> -->
 
     <!-------------------------------------------------- End Footer ----------------------------->
 
