--- a/portfolio.html
+++ b/portfolio.html
@@ -214,7 +214,7 @@
 
     <!-- Footer-------------------------------------------------------------->
 
-    
+<!--     
     <footer class="footer footer-portfolio mx-auto">
         <div class="footer-links">
           <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
@@ -223,7 +223,7 @@
           <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
             <i class="fab fa-instagram"></i></a>
         </div>
-</footer>
+</footer> -->
     <!-------------------------------------------------- End Footer ----------------------------->
 
 
