--- a/resume.html
+++ b/resume.html
@@ -49,13 +49,19 @@
     </div>
   </nav>
 
+  <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+      class="fab fa-linkedin-in"></i></a>
+  <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+    <i class="fab fa-instagram"></i></a>
+
   <!-- End Nav bar ------------------------------------------------------->
     
     <img src="imgs/resume.jpg" id="resume">
 
     <!-- Footer-------------------------------------------------------------->
 
-  
+<!--   
     <footer class="footer footer-resume mx-auto">
         <div class="footer-links">
           <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
@@ -64,7 +70,7 @@
           <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
             <i class="fab fa-instagram"></i></a>
         </div>
-</footer>
+</footer> -->
 <!-------------------------------------------------- End Footer ----------------------------->
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
