reformatting footer links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-  <!-- font awesome link for fonts -->
-  <script src="https://kit.fontawesome.com/63824e3d3e.js" crossorigin="anonymous"></script>
+ <!-- font awesome link for icons -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
   <!-- favicon -->
   <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
@@ -86,8 +86,7 @@
         <p><i class="fas fa-envelope"></i><span class="font-weight-bold"> Email: </span>robert.greenawalt29@gmail.com
         </p>
         <p><i class="fas fa-phone"></i><span class="font-weight-bold"> Phone: </span>215-913-7231</p>
-        <p>Github: <a href="https://github.com/rsg71">Github</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/">LinkedIn</a></p>
+        
         <div class="row" id="resume-portfolio-buttons">
           <a href="portfolio.html" class="btn btn-lg btn-outline-dark mx-auto" id="portfolio-btn-link">Portfolio</a>
           <a href="resume.html" class="btn btn-lg btn-outline-dark mx-auto" id="resume-btn-link">Resume</a>
@@ -98,26 +97,24 @@
 
         <br>
 
-        <div class="row mx-auto" style="width:200px" id="github">
-
-        </div>
+       
       </section>
     </section>
 
-
+    </main>
   <!-- Footer-------------------------------------------------------------->
 
 
-<!-- 
+
   <footer class="footer footer-index mx-auto">
   <div class="footer-links">
-      <a href="https://github.com/rsg71" target="_blank">Github<i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn<i
+      <a href="https://github.com/rsg71" class="text-decoration-none" target="_blank" >Github<i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/"  class="text-decoration-none" target="_blank">LinkedIn<i
           class="fab fa-linkedin-in"></i></a>
-      <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">Instagram
+      <a href="https://www.instagram.com/robert.greenawalt29/"  class="text-decoration-none" target="_blank">Instagram
         <i class="fab fa-instagram"></i></a>
     </div>
-  </footer> -->
+  </footer>
   <!-------------------------------------------------- End Footer ----------------------------->
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
