--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
 
   <!-- End Nav bar ------------------------------------------------------->
     
-    <img src="imgs/resume.jpg" id="resume">
+    <img src="imgs/resume-R.jpg" id="resume">
 
     <!-- Footer-------------------------------------------------------------->
 
