changing description of weather app project on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,8 +110,7 @@
                             class="card-img-top" alt="coming soon image" height="358"></a>
                     <figure class="card-body">
                         <h5 class="card-title">Weather App</h5>
-                        <p class="card-text">This is a future project that I have not yet completed. I will be filling
-                            out links to new websites as the class progresses.</p>
+                        <p class="card-text">Search by city to return a real time weather report; also included is a five day forecast</p>
                             <ul class="list-group">
                                 <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
                                 <li class="list-group-item"><a href="https://github.com/rsg71/Weather-App" target="_blank" class="card-link">Github Repo</a></li>
