--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     <!-- End Nav bar -------------------------------------------------------------------------------->
 
     <main class="container contact">
-        <h1>Contact</h1 class="mt-3">
+        <h1 class="mt-3">Contact</h1>
         <section>
             <form class="form-group">
                 <label for="exampleFormControlInput1">Name:</label>
