changed background image behind headshot; removed overflow-x

--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
 
 
     <section class="row headshot-block">
-      <div>
+      <!-- <div> -->
       <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert"
         class="headshot mx-auto shadow-lg">
-      </div>
-      <div class="right-of-headshot">
-        
-      </div>
-      <!-- <div class="col">
+      <!-- </div> -->
+
+
+      <!-- <div class="col right-of-headshot">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -75,13 +74,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="imgs/brewery-finder.PNG" class="d-block w-100 h-100" alt="...">
+              <img src="imgs/brewery-finder.PNG" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="imgs/key-west.jpg" class="d-block w-100 h-100" alt="...">
+              <img src="imgs/brewery-finder.PNG" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="imgs/Horiseon.PNG" class="d-block w-100 h-100" alt="...">
+              <img src="imgs/brewery-finder.PNG" class="d-block w-100" alt="...">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -94,6 +93,7 @@
           </a>
         </div>
       </div> -->
+      
     </section>
 
 
