--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,18 @@
     <h1 class="mt-3">Contact</h1>
     <form id="cform" method="POST" data-email="from_email@example.com"
       action="/">
-      <div class="form-group">
-        <label for="exampleFormControlInput1">Name:</label>
-        <input id="name" name="name" type="name" class="form-control" class="exampleFormControlInput1"
-          placeholder="John Doe">
+      
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="input1">First Name:</label>
+          <input type="name" id="firstName" class="form-control" id="inputfirstname" placeholder="First">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="input2">Last Name:</label>
+          <input type="name" id="lastName" class="form-control" id="inputlastname" placeholder="Last">
+        </div>
       </div>
+
       <div class="form-group">
         <label for="exampleFormControlInput1">Email address:</label>
         <input id="email" name="email" value="" type="email" class="form-control" class="exampleFormControlInput1"
@@ -107,7 +114,6 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
 
-   <script type="text/javascript" src="contact.js"></script>
 
 
 
