--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/Portfolio/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Portfolio/portfolio">Portfolio</a>
+          <a class="nav-link" href="/portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Portfolio/contact">Contact</a>
+          <a class="nav-link" href="/contact">Contact</a>
         </li>
       </ul>
     </div>
